--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mern-shopping",
   "version": "1.0.0",
+  "homepage": "https://https://jonoc0.github.io/redux-store/",
   "description": "",
   "main": "server/server.js",
   "scripts": {
@@ -8,12 +9,15 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "gh-pages": "^3.2.3"
   }
 }
